[gd_scene load_steps=6 format=3 uid="uid://hlbrr4qk1qp4"]

[ext_resource type="Texture2D" uid="uid://2w64k1oe2f4w" path="res://graphics/enemies/hunter/hunter.png" id="1_mgmw6"]
[ext_resource type="Script" path="res://Scripts/hunter.gd" id="1_vw8l8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k5u7s"]
radius = 27.0
height = 308.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rjt0m"]
radius = 2427.9

[sub_resource type="CircleShape2D" id="CircleShape2D_cnq4f"]
radius = 223.182

[node name="Hunter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_vw8l8")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_mgmw6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_k5u7s")

[node name="NoticeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_rjt0m")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_cnq4f")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
